Update OnboardingTaskListBuilderServiceTest.java